--- a/chams_vis_ab_tb.cfg
+++ b/chams_vis_ab_tb.cfg
@@ -29,6 +29,7 @@ chams_visible 1
 chams_invisible 0
 chams_style_hands 0
 chams_style_weapon 0
+misc_lobby_earrape 0
 color_style 1
 color_visible_team 00ff00
 color_invisible_team 00c0ff
@@ -46,7 +47,7 @@ legitbot_nosnap_weapon_general 1
 legitbot_nonsticky_weapon_general 1
 legitbot_smokecheck_weapon_general 0
 legitbot_silent_weapon_general 0
-legitbot_backtracking_weapon_general 1
+legitbot_backtracking_weapon_general 0
 legitbot_enemy_only_weapon_general 1
 legitbot_smoothtype_weapon_general 1
 legitbot_smoothfactor_weapon_general 15.000000
