--- a/chams_vis_ab_tb.cfg
+++ b/chams_vis_ab_tb.cfg
@@ -1,5 +1,4 @@
 clearcfg
-legitbot_active 1
 esp_enable 1
 esp_visibility_check 1
 esp_boxstyle 1
@@ -30,6 +29,7 @@ chams_invisible 0
 chams_style_hands 0
 chams_style_weapon 0
 misc_lobby_earrape 0
+misc_bunnyhop 0
 color_style 1
 color_visible_team 00ff00
 color_invisible_team 00c0ff
